Tue Feb 09 18:51:08 1999  George Lebl  <jirka@5z.com>

	* gnome-pixmap-entry.c: fix this up, don't look up pixmaps more then
	  once a second if the entry is changing, plus scale the preview in
	  the file browser properly

1999-02-09  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c (gil_button_press): Do nothing if the button
	is different from 1.

1999-02-09  Chris Lahey  <clahey@umich.edu>

	* gnome-paper-selector.h, gnome-paper-selector.c: Added
	gnome_paper_selector_set functions.  These are neccessary and thus
	constitute a bug fix.

1999-02-08  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-dock.c (drag_snap): New function: contains the code from
 	`drag_motion()'.  This is does not change anything in the
 	behavior, but makes it more simple to implement outline movement
 	later.

	* gnome-dock-item.c (gnome_dock_item_delete_event): Do nothing for 
	now.

1999-02-07  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-app.c (gnome_app_realize): Removed.
	(gnome_app_show): Same as the removed `gnome_app_realize', but
 	invoke the parent class' `show' method (instead of the `realize'
 	method) before returning.
	(gnome_app_class_init): Install `gnome_app_show' as the `show'
 	method.

1999-02-07  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-dock.c (drag_new): Avoid re-grabbing the pointer, as
 	suggested by Jaka.
	(drag_new): No longer subtract the drag offsets from the current
 	coordinates.
	(drag_to): Likewise.
	(drag_floating): Likewise.

	* gnome-dock-item.c (gnome_dock_item_grab_pointer): Do not return
 	until the grab is successful.
	(gnome_dock_item_init): Do not initialize `grab_on_map_event'
 	anymore.
	(gnome_dock_item_button_changed): Likewise.
	(gnome_dock_item_map_event): Do not attempt a grab anymore.
	(gnome_dock_item_motion): Subtract the drag offset from the new
 	coordinates before emitting them.

	* gnome-dock-item.h (struct _GnomeDockItem): Member
	`grab_on_map_event' removed.
